--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Unknown constraint types" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Main-->
@@ -992,27 +993,27 @@
                             <constraint firstItem="9Q6-BJ-kVR" firstAttribute="leading" secondItem="fDa-NY-Deo" secondAttribute="trailing" constant="1" id="1Ut-eB-ddd"/>
                             <constraint firstItem="AZZ-CV-tWC" firstAttribute="leading" secondItem="bya-cR-yln" secondAttribute="leadingMargin" constant="-20" id="5m1-Kg-1oo"/>
                             <constraint firstItem="wxy-Oc-qZR" firstAttribute="top" secondItem="Zeh-ct-Dji" secondAttribute="bottom" id="6p0-wC-gnv"/>
-                            <constraint firstItem="E5D-Yo-CCe" firstAttribute="top" secondItem="Bjv-fK-xuV" secondAttribute="bottom" constant="4" id="8HV-6k-aa8"/>
+                            <constraint firstItem="E5D-Yo-CCe" firstAttribute="top" secondAttribute="bottom" constant="4" id="8HV-6k-aa8"/>
                             <constraint firstItem="Zeh-ct-Dji" firstAttribute="leading" secondItem="bya-cR-yln" secondAttribute="leadingMargin" constant="-20" id="Jr7-1W-APe"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ei5-tI-NqC" secondAttribute="trailing" constant="-20" id="R9w-g7-EyJ"/>
-                            <constraint firstItem="Bjv-fK-xuV" firstAttribute="top" secondItem="ei5-tI-NqC" secondAttribute="bottom" constant="4" id="RhL-j2-lI9"/>
+                            <constraint firstAttribute="top" secondItem="ei5-tI-NqC" secondAttribute="bottom" constant="4" id="RhL-j2-lI9"/>
                             <constraint firstItem="ei5-tI-NqC" firstAttribute="top" secondItem="YLY-Aj-Jcw" secondAttribute="bottom" id="SmP-9n-xSh"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Bjv-fK-xuV" secondAttribute="trailing" constant="-20" id="T1R-tB-xml"/>
+                            <constraint firstAttribute="trailingMargin" secondAttribute="trailing" constant="-20" id="T1R-tB-xml"/>
                             <constraint firstItem="8Tj-cP-pFI" firstAttribute="leading" secondItem="E5D-Yo-CCe" secondAttribute="trailing" constant="1" id="To4-f2-ou2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="AZZ-CV-tWC" secondAttribute="trailing" constant="-20" id="Vzn-ub-k4S"/>
                             <constraint firstItem="3bT-Ya-emy" firstAttribute="centerY" secondItem="gha-C1-RtK" secondAttribute="centerY" id="WjM-f0-bZn"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Zeh-ct-Dji" secondAttribute="trailing" constant="-20" id="cCW-Fm-fyw"/>
                             <constraint firstItem="ei5-tI-NqC" firstAttribute="leading" secondItem="bya-cR-yln" secondAttribute="leadingMargin" constant="-20" id="fcl-6B-b4Z"/>
                             <constraint firstItem="0lp-CP-BLu" firstAttribute="leading" secondItem="8Tj-cP-pFI" secondAttribute="trailing" constant="1" id="gD6-7R-XQe"/>
-                            <constraint firstItem="8Tj-cP-pFI" firstAttribute="top" secondItem="Bjv-fK-xuV" secondAttribute="bottom" constant="4" id="gxU-Z0-nJh"/>
-                            <constraint firstItem="Bjv-fK-xuV" firstAttribute="leading" secondItem="bya-cR-yln" secondAttribute="leadingMargin" constant="-20" id="i9u-d2-n6f"/>
+                            <constraint firstItem="8Tj-cP-pFI" firstAttribute="top" secondAttribute="bottom" constant="4" id="gxU-Z0-nJh"/>
+                            <constraint firstAttribute="leading" secondItem="bya-cR-yln" secondAttribute="leadingMargin" constant="-20" id="i9u-d2-n6f"/>
                             <constraint firstItem="3bT-Ya-emy" firstAttribute="leading" secondItem="gha-C1-RtK" secondAttribute="trailing" constant="4" id="iEu-w3-a9L"/>
-                            <constraint firstItem="0lp-CP-BLu" firstAttribute="top" secondItem="Bjv-fK-xuV" secondAttribute="bottom" constant="4" id="kaN-3b-1hi"/>
+                            <constraint firstItem="0lp-CP-BLu" firstAttribute="top" secondAttribute="bottom" constant="4" id="kaN-3b-1hi"/>
                             <constraint firstItem="0lp-CP-BLu" firstAttribute="centerX" secondItem="bya-cR-yln" secondAttribute="centerX" id="pMW-Nr-TSA"/>
-                            <constraint firstItem="fDa-NY-Deo" firstAttribute="top" secondItem="Bjv-fK-xuV" secondAttribute="bottom" constant="4" id="qYt-yb-dTx"/>
+                            <constraint firstItem="fDa-NY-Deo" firstAttribute="top" secondAttribute="bottom" constant="4" id="qYt-yb-dTx"/>
                             <constraint firstItem="gha-C1-RtK" firstAttribute="leading" secondItem="bya-cR-yln" secondAttribute="leadingMargin" constant="-20" id="sib-zX-G7t"/>
                             <constraint firstItem="fDa-NY-Deo" firstAttribute="leading" secondItem="0lp-CP-BLu" secondAttribute="trailing" constant="1" id="xtC-D1-mWS"/>
-                            <constraint firstItem="9Q6-BJ-kVR" firstAttribute="top" secondItem="Bjv-fK-xuV" secondAttribute="bottom" constant="4" id="zch-ei-zq3"/>
+                            <constraint firstItem="9Q6-BJ-kVR" firstAttribute="top" secondAttribute="bottom" constant="4" id="zch-ei-zq3"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
@@ -1021,7 +1022,6 @@
                         <outlet property="dateBegin" destination="tSJ-Zu-ocR" id="NkB-xe-dOF"/>
                         <outlet property="dateFinal" destination="mkz-oz-dAg" id="7Xm-0o-eiI"/>
                         <outlet property="descAnnounce" destination="AZZ-CV-tWC" id="jJg-nM-VaF"/>
-                        <outlet property="nomDonneur" destination="Bjv-fK-xuV" id="aNX-TO-L5W"/>
                         <outlet property="star1" destination="E5D-Yo-CCe" id="TmQ-Ld-6BP"/>
                         <outlet property="star2" destination="8Tj-cP-pFI" id="0Se-uk-55Y"/>
                         <outlet property="star3" destination="0lp-CP-BLu" id="4OW-9e-CJO"/>
@@ -1638,9 +1638,9 @@
         <image name="user" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qsO-TL-m9W"/>
-        <segue reference="z9u-48-bKC"/>
         <segue reference="TC9-cJ-Qm6"/>
+        <segue reference="z9u-48-bKC"/>
+        <segue reference="8gM-J3-M82"/>
         <segue reference="WDc-4o-WhT"/>
     </inferredMetricsTieBreakers>
 </document>
