--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -272,7 +272,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q8s-Sr-egI">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q8s-Sr-egI">
                                 <rect key="frame" x="-4" y="20" width="328" height="416"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -305,7 +305,7 @@
                                     <outlet property="delegate" destination="gdQ-f8-y1b" id="o5D-3D-kHx"/>
                                 </connections>
                             </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cEy-OK-PiB">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cEy-OK-PiB">
                                 <rect key="frame" x="-4" y="436" width="328" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="7MW-7a-8nh">
@@ -1251,7 +1251,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3m1-G0-I91">
-                                <rect key="frame" x="-4" y="436" width="328" height="44"/>
+                                <rect key="frame" x="-4" y="387" width="328" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="rXi-wD-1jY">
                                         <color key="tintColor" red="1" green="0.062036883260000002" blue="0.1517918966" alpha="1" colorSpace="calibratedRGB"/>
@@ -1262,7 +1262,7 @@
                                 </items>
                             </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MtA-0O-EtH">
-                                <rect key="frame" x="-4" y="20" width="328" height="416"/>
+                                <rect key="frame" x="-4" y="20" width="328" height="367"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Guy" id="WMR-op-fx2" customClass="ServiceTableViewCell" customModule="projectHtlp" customModuleProvider="target">
@@ -1285,18 +1285,18 @@
                                                     <color key="textColor" red="0.11160370579999999" green="0.31181171819999998" blue="0.3646515052" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FrO-jp-0W8">
+                                                    <rect key="frame" x="258" y="27" width="20" height="23"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                                    <color key="textColor" red="0.11160370579999999" green="0.31181171819999998" blue="0.3646515052" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bD-6o-s7Z">
                                                     <rect key="frame" x="56" y="27" width="200" height="19"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="200" id="QEk-2g-YOs"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
-                                                    <color key="textColor" red="0.11160370579999999" green="0.31181171819999998" blue="0.3646515052" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FrO-jp-0W8">
-                                                    <rect key="frame" x="258" y="27" width="20" height="23"/>
-                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                                     <color key="textColor" red="0.11160370579999999" green="0.31181171819999998" blue="0.3646515052" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -1449,6 +1449,112 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v7i-rO-UI2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1182" y="1575"/>
+        </scene>
+        <!--Service Rendu Donne View Controller-->
+        <scene sceneID="JOp-cX-uxG">
+            <objects>
+                <viewController storyboardIdentifier="serviceDonneRendu" id="Gxm-38-qpi" customClass="ServiceRenduDonneViewController" customModule="projectHtlp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Nj-Sk-QVO"/>
+                        <viewControllerLayoutGuide type="bottom" id="dsj-p4-FmA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9W0-fi-drI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8a5-lD-t8a">
+                                <rect key="frame" x="-4" y="436" width="328" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="reply" id="KAt-kS-3tH">
+                                        <color key="tintColor" red="1" green="0.062036883260000002" blue="0.1517918966" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <segue destination="OWo-jB-5f2" kind="show" id="k3N-91-7wQ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qxj-1j-8P8">
+                                <rect key="frame" x="-4" y="20" width="328" height="416"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Fernand" id="x1g-Mx-zx2" customClass="ServiceTableViewCell" customModule="projectHtlp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="328" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x1g-Mx-zx2" id="1ky-V7-Lh5">
+                                            <rect key="frame" x="0.0" y="0.0" width="328" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZQY-Nq-d7J">
+                                                    <rect key="frame" x="8" y="0.0" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="FMa-Xo-Y6F"/>
+                                                        <constraint firstAttribute="height" constant="44" id="dMx-Y1-7RI"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UvT-su-yNd">
+                                                    <rect key="frame" x="258" y="27" width="20" height="23"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                                    <color key="textColor" red="0.11160370579999999" green="0.31181171819999998" blue="0.3646515052" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZWP-L9-BuE">
+                                                    <rect key="frame" x="56" y="27" width="200" height="19"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="200" id="Swx-c3-wMD"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
+                                                    <color key="textColor" red="0.11160370579999999" green="0.31181171819999998" blue="0.3646515052" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titre service" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoO-RN-mtH">
+                                                    <rect key="frame" x="56" y="-2" width="264" height="28"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="21"/>
+                                                    <color key="textColor" red="0.11160370579999999" green="0.31181171819999998" blue="0.3646515052" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="NoO-RN-mtH" firstAttribute="trailing" secondItem="1ky-V7-Lh5" secondAttribute="trailingMargin" id="6VA-kI-Xfh"/>
+                                                <constraint firstItem="ZWP-L9-BuE" firstAttribute="top" secondItem="NoO-RN-mtH" secondAttribute="bottom" constant="1" id="A9x-65-2XJ"/>
+                                                <constraint firstItem="NoO-RN-mtH" firstAttribute="top" secondItem="1ky-V7-Lh5" secondAttribute="topMargin" constant="-10" id="HDh-Ws-uJ4"/>
+                                                <constraint firstItem="ZQY-Nq-d7J" firstAttribute="top" secondItem="1ky-V7-Lh5" secondAttribute="topMargin" constant="-8" id="Mn9-S9-ts6"/>
+                                                <constraint firstItem="UvT-su-yNd" firstAttribute="top" secondItem="NoO-RN-mtH" secondAttribute="bottom" constant="1" id="N8x-kX-jzJ"/>
+                                                <constraint firstItem="ZWP-L9-BuE" firstAttribute="leading" secondItem="ZQY-Nq-d7J" secondAttribute="trailing" constant="4" id="NmO-ke-HaY"/>
+                                                <constraint firstItem="ZQY-Nq-d7J" firstAttribute="leading" secondItem="1ky-V7-Lh5" secondAttribute="leadingMargin" id="ZVN-FK-lpY"/>
+                                                <constraint firstItem="UvT-su-yNd" firstAttribute="leading" secondItem="ZWP-L9-BuE" secondAttribute="trailing" constant="2" id="iB0-5x-TfY"/>
+                                                <constraint firstItem="NoO-RN-mtH" firstAttribute="leading" secondItem="ZQY-Nq-d7J" secondAttribute="trailing" constant="4" id="xAQ-pb-bDH"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageCategory" destination="ZQY-Nq-d7J" id="pkx-ft-6EI"/>
+                                            <outlet property="otherService" destination="ZWP-L9-BuE" id="mot-St-0yZ"/>
+                                            <outlet property="timeService" destination="UvT-su-yNd" id="Rs9-Lt-gnP"/>
+                                            <outlet property="titleService" destination="NoO-RN-mtH" id="2se-MD-svc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Gxm-38-qpi" id="oFh-pU-1ms"/>
+                                    <outlet property="delegate" destination="Gxm-38-qpi" id="Bwi-HN-9mm"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="8a5-lD-t8a" secondAttribute="trailing" constant="-20" id="1bp-bd-eGg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Qxj-1j-8P8" secondAttribute="trailing" constant="-20" id="F9J-kw-Wje"/>
+                            <constraint firstItem="dsj-p4-FmA" firstAttribute="top" secondItem="8a5-lD-t8a" secondAttribute="bottom" id="GRi-GQ-ohd"/>
+                            <constraint firstItem="8a5-lD-t8a" firstAttribute="leading" secondItem="9W0-fi-drI" secondAttribute="leadingMargin" constant="-20" id="VHL-J5-Imd"/>
+                            <constraint firstItem="Qxj-1j-8P8" firstAttribute="leading" secondItem="9W0-fi-drI" secondAttribute="leadingMargin" constant="-20" id="Xxo-i2-Us3"/>
+                            <constraint firstItem="8a5-lD-t8a" firstAttribute="top" secondItem="Qxj-1j-8P8" secondAttribute="bottom" id="Zuy-7C-5Cs"/>
+                            <constraint firstItem="Qxj-1j-8P8" firstAttribute="top" secondItem="6Nj-Sk-QVO" secondAttribute="bottom" id="tmh-ch-Mii"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3I8-NL-4ES" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1182" y="2140"/>
         </scene>
         <!--Modif Picture Compte View Controller-->
         <scene sceneID="4cB-sI-DCG">
@@ -1860,8 +1966,9 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Tpd-9O-h1w"/>
-        <segue reference="Gs5-mf-VNe"/>
+        <segue reference="KFs-S8-H22"/>
         <segue reference="hOD-Do-oE5"/>
         <segue reference="HUV-72-kJb"/>
+        <segue reference="k3N-91-7wQ"/>
     </inferredMetricsTieBreakers>
 </document>
